<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:squint="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.UserProfileNoEditActivity">
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@color/top_bg"
        android:elevation="10dp">
        <ImageView
            android:id="@+id/topImg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user_icon"
            android:paddingTop="25dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
            <ImageView
                android:id="@+id/photo_userImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="90dp"
                android:paddingTop="90dp"
                android:src="@drawable/photo_icon" />
            <ImageView
                android:id="@+id/bg_userImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingTop="90dp"
                android:paddingRight="10dp"
                android:src="@drawable/photo_icon" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/top"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp">
            <RelativeLayout
                android:id="@+id/nameRl"
                style="@style/userEtTvRl">
                <EditText
                    android:id="@+id/nameEt"
                    style="@style/onelineuserEditText"
                    android:inputType="textPersonName"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/name" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/addressRl"
                android:layout_below="@+id/nameRl"
                style="@style/userEtTvRl">
                <EditText
                    android:id="@+id/addressEt"
                    style="@style/fivelineuserEditText"
                    android:inputType="textPostalAddress"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/address" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/mailRl"
                android:layout_below="@+id/addressRl"
                style="@style/userEtTvRl">
                <EditText
                    android:id="@+id/mailEt"
                    style="@style/onelineuserEditText"
                    android:inputType="textEmailAddress"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/email" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/phoneRl"
                style="@style/userEtTvRl"
                android:layout_below="@+id/mailRl">
                <EditText
                    android:id="@+id/phoneEt"
                    style="@style/onelineuserEditText"
                    android:inputType="phone"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/phonenumber" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/sDesRl"
                style="@style/userEtTvRl"
                android:layout_below="@+id/phoneRl">
                <EditText
                    android:id="@+id/sDesEt"
                    style="@style/threelineuserEditText"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/description"
                    android:inputType="textMultiLine"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/proofRl"
                style="@style/userEtTvRl"
                android:layout_below="@+id/sDesRl">
                <EditText
                    android:id="@+id/proofEt"
                    style="@style/onelineuserEditText"
                    android:inputType="text"/>
                <TextView
                    style="@style/usereditTextView"
                    android:text="@string/idproof" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>